# cinnamon-AI-Clerify-Work

./: .gitignore  CMakeLists.txt  MERGE_NOTES.md  Makefile  Makefile.wiiu  README.md  build-cmake-n3ds.sh  build-n3ds.sh  build-wiiu.sh  build_log.txt  cinnamon.lst  cinnamon.rsf  compile_commands.json  debug_offset_map.py  debug_texture.py  make wuhb windows.bat  make-cia-n3ds.sh  processor.py  undertale.ini
.github/workflows/: build.yml
build-n3ds/: CMakeCache.txt  Makefile  cmake_install.cmake
build-wiiu/: undertale.lst
datawin_py/: README.md  example.py  test_import.py
include/: profiler.h
output-wiiu/: cinnamon.wuhb  undertale.wuhb
resources/: AppInfo  template.rsf
resources/3ds/meta/: AppInfo
resources/gfx/: borders.t3s
resources/wiiu/shaders/: pos_col.ps  pos_col.vs  textured_quad.gsh  textured_quad.ps  textured_quad.vs
romfs/gfx/: borders.t3s
src/: audio_system.h  binary_reader.c  binary_reader.h  binary_utils.h  bytecode_versions.h  collision.h  common.h  data_win.c  data_win.h  data_win_print.c  debug_overlay.c  debug_overlay.h  file_system.h  gml_array.c  gml_array.h  gml_method.c  gml_method.h  ini.c  ini.h  input_recording.c  input_recording.h  instance.c  instance.h  json_reader.c  json_reader.h  json_writer.c  json_writer.h  matrix_math.h  noop_audio_system.c  noop_audio_system.h  noop_file_system.c  noop_file_system.h  profiler.c  real_type.h  renderer.h  runner.c  runner.h  runner_keyboard.c  runner_keyboard.h  rvalue.h  (+6 more)
src/glfw/: gl_renderer.c  gl_renderer.cpp  gl_renderer.h  gl_renderer.hpp  glfw_file_system.c  glfw_file_system.cpp  glfw_file_system.hpp  ma_audio_system.c  ma_audio_system.h  main.c  main.cpp  stb_impl.cpp
src/n3ds/: main.c  n3ds_audio_system.c  n3ds_audio_system.h  n3ds_renderer.c  n3ds_renderer.h
src/ps2/: gs_renderer.c  gs_renderer.cpp  gs_renderer.h  gs_renderer.hpp  gs_renderer_flat.c  gs_renderer_flat.cpp  gs_renderer_flat.h  main.c  main.cpp  ps2_audio_system.c  ps2_audio_system.h  ps2_file_system.c  ps2_file_system.cpp  ps2_file_system.h  ps2_file_system.hpp  ps2_utils.c  ps2_utils.cpp  ps2_utils.h  ps2_utils.hpp
src/wiiu/: main.c  pos_col_gsh.h  stb_impl.c  textured_quad_gsh.h  wiiu_audio_system.c  wiiu_audio_system.h  wiiu_file_system.c  wiiu_file_system.h  wiiu_renderer.c  wiiu_renderer.h
tmp_compare/: CDrawText_8ef4fe08.c  CDrawText_current.c  CDrawText_current_now.c  diff_CDrawText.txt  diff_CDrawText_now.txt  diff_crossplatform_vs_8ef4fe08.patch  diff_drawRegion.txt  diff_drawRegion_now.txt  diff_n3ds_vs_8ef4fe08.patch  diff_stats_vs_8ef4fe08.txt  drawRegion_8ef4fe08.c  drawRegion_current.c  drawRegion_current_now.c  linearToTile_8ef4fe08.c  n3ds_renderer_8ef4fe08.c  uploadRegion_current.c
